# PMDL_MLops

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: .gitignore  README.md
deployment/: README.md  api.Dockerfile  api_requirements.txt  app.py  deployment_requirements.txt  gradio.Dockerfile  gradio_app.py
deployment/models/: .gitignore  README.md
deployment/src/: README.md  main.py  model.py
notebooks/: README.md  model_traning.ipynb
