[tool.poetry]
name = "pmdl-mlops"
version = "0.1.0"
description = ""
authors = ["Ivan Golov <ivangolov@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.2"
numpy = "<2.0.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
psycopg2-binary = "^2.9.9"
hydra-core = "^1.3.2"
dvc = "^3.51.2"
great-expectations = "^0.18.17"
mlflow = "2.14.2"
mlflow-skinny = "2.14.2"
fastapi = "^0.115.0"
streamlit = "^1.38.0"
nltk = "^3.9.1"
transformers = "^4.44.2"
gradio = "^4.44.0"
seaborn = "^0.13.2"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
